[package]
name = "compare_steam_games"
version = "1.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
reqwest = "0.11"
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_oauth2 = { version = "0.5.0-rc.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
